# dearmor

./: .gitignore  README.md  build_binary.bat  code.py  decompiler.py  setup.py  tox.ini
.github/workflows/: publish.yaml  test.yaml
dearmor/: __init__.py  __main__.py  code.py
dearmor-library/: CMakeLists.txt  main.cpp  sdk.cpp  sdk.h
tests/: test_calculations.py  test_conversion.py  test_decorators.py  test_single_file_conversion.py  utils.py
tests/py_files/: call_break_before_inner.py  file_with_class.py  functions_all_called.py  functions_some_called.py  functions_with_parameters.py  no_code_in_modle.py  simple.py
tests/py_files/entry_script/: a.py  b.py
